--- a/test-output/old/Regression Suite/toc.html
+++ b/test-output/old/Regression Suite/toc.html
@@ -20,18 +20,18 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Test2 (0/0/7)</td><td valign='top' align='right'>
-  <a href='Test2.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>verifyLoginWithInvalidCredentails (0/2/6)</td><td valign='top' align='right'>
+  <a href='verifyLoginWithInvalidCredentails.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>test1 (0/0/2)</td><td valign='top' align='right'>
-  <a href='test1.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>verifyLoginWithValidCredentails (1/3/15)</td><td valign='top' align='right'>
+  <a href='verifyLoginWithValidCredentails.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
