--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8b466">  <td>18/04/07 23:14:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrossBrowserTestNew.VerifyProductring()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@6eebc39e]">VerifyProductring</td> 
-  <td>TestNG@606072289</td>   <td></td> </tr>
-<tr bgcolor="e8b466">  <td>18/04/07 23:14:19</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrossBrowserTestNew.VerifyProductring()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@3bfdc050]">VerifyProductring</td> 
-  <td>TestNG@432682856</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>18/04/07 23:14:19</td>   <td>1197</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CrossBrowserTestBase.afterTest()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@6eebc39e]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@606072289</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>18/04/07 23:14:22</td>   <td>3942</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CrossBrowserTestBase.afterTest()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@3bfdc050]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@432682856</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>18/04/07 23:14:15</td>   <td>-3169</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CrossBrowserTestBase.beforeTest(java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@6eebc39e]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@606072289</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>18/04/07 23:14:15</td>   <td>-3169</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CrossBrowserTestBase.beforeTest(java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@3bfdc050]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@432682856</td>   <td></td> </tr>
-<tr bgcolor="e8b466">  <td>18/04/07 23:14:18</td>   <td>145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrossBrowserTestNew.verifyLoginWithInvalidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@6eebc39e]">verifyLoginWithInvalidCredentails</td> 
-  <td>TestNG@606072289</td>   <td></td> </tr>
-<tr bgcolor="e8b466">  <td>18/04/07 23:14:20</td>   <td>2159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrossBrowserTestNew.verifyLoginWithInvalidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@3bfdc050]">verifyLoginWithInvalidCredentails</td> 
-  <td>TestNG@432682856</td>   <td></td> </tr>
+<tr bgcolor="a3ffec">  <td>18/05/27 23:50:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrossBrowserTestNew.VerifyProductring()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@2286778]">VerifyProductring</td> 
+  <td>TestNG@1730821641</td>   <td></td> </tr>
+<tr bgcolor="a3ffec">  <td>18/05/27 23:50:01</td>   <td>214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrossBrowserTestNew.VerifyProductring()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@dc24521]">VerifyProductring</td> 
+  <td>TestNG@1349142651</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>18/05/27 23:50:02</td>   <td>1701</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CrossBrowserTestBase.afterTest()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@2286778]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1730821641</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>18/05/27 23:50:04</td>   <td>4019</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CrossBrowserTestBase.afterTest()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@dc24521]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1349142651</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>18/05/27 23:49:55</td>   <td>-5551</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CrossBrowserTestBase.beforeTest(java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@dc24521]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1349142651</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>18/05/27 23:49:55</td>   <td>-5551</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CrossBrowserTestBase.beforeTest(java.lang.String)[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@2286778]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1730821641</td>   <td></td> </tr>
+<tr bgcolor="a3ffec">  <td>18/05/27 23:50:01</td>   <td>119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrossBrowserTestNew.verifyLoginWithInvalidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@2286778]">verifyLoginWithInvalidCredentails</td> 
+  <td>TestNG@1730821641</td>   <td></td> </tr>
+<tr bgcolor="a3ffec">  <td>18/05/27 23:50:02</td>   <td>1792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrossBrowserTestNew.verifyLoginWithInvalidCredentails()[pri:0, instance:com.framework.automation.framework.homePage.CrossBrowserTestNew@dc24521]">verifyLoginWithInvalidCredentails</td> 
+  <td>TestNG@1349142651</td>   <td></td> </tr>
 </table>
